--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "com.reservation.yakapreseverationapplication"
         minSdk 26
         targetSdk 34
-        versionCode 2
-        versionName "1.0.2"
+        versionCode 3
+        versionName "1.2.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.release
@@ -71,5 +71,9 @@ dependencies {
 
     //QR generation and reader API
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
+    //splash screen API
+    implementation "androidx.core:core-splashscreen:1.0.1"
+
 
 }
